--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,3 +23,8 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
+    - name: Make build.zip
+      uses: actions/upload-artifact@v3
+      with:
+        name: build.zip
+        path: build/
